wfm/testsuite/tests/include.ycp
{
    // this doesnt really do anything, it's just here
    // to check completeFilename() and the logs

    include "empty.ycp";
    include "./tests/empty.ycp";
    include "./../testsuite/tests/empty.ycp";
    include "/empty.ycp";		// error
    include "../empty.ycp";		// error
    include ".empty.ycp";		// ok
    return true;
}
